# sudoku3x3_rust

./: Cargo.toml  README.md
data/: easy.txt  hard.txt  sudoku.ini
src/: controller.rs  data.rs  lib.rs  main.rs  sudoku.rs  sudoku_board.rs  sudoku_state.rs
