[package]
name = "sudoku3x3"
version = "0.1.0"
authors = ["Anton <asmeenk@planet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = { version = "1.3.0" }
druid = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

